QA-Project/force-app/main/default/objects/Course__c/fields/CourseLength__c.field-meta.xml
<CustomField>
    <fullName>CourseLength__c</fullName>
    <label>CourseLength</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>