QA-Project/force-app/main/default/objects/Course__c/fields/Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Rate__c</fullName>
    <description>Hourly rate charged by the instructor.</description>
    <label>Hourly Rate</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>