QA-Project/force-app/main/default/objects/Course__c/listViews/Courses.listView-meta.xml
<ListView>
    <fullName>Courses</fullName>
    <columns>NAME</columns>
    <columns>Instructor__c</columns>
    <columns>CourseLength__c</columns>
    <columns>Is_Technical__c</columns>
    <filterScope>Mine</filterScope>
    <label>Courses</label>
</ListView>